// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it correctly allocates required width for "content" 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c11 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
  padding-left: 12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c9 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: center;
}

.c0 {
  margin-left: -12px;
}

.c10 {
  min-width: 0;
}

.c3 {
  min-width: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  width: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:first-child > .c5 {
  padding-top: 0;
}

.c7 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: -12px;
  }
}

<div
  class="c0 c1"
  data-id="columns"
  display="flex,flex,flex,flex,flex"
>
  <div
    class="c2 c3 c4"
    data-id="column"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <div
          class="c9"
          style="margin-top: 2px;"
        >
          This is content width
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2 c10 c11"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="c2 c10 c11"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`it correctly sets width for proportions 1/3 and 2/3 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
  padding-left: 12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c9 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: center;
}

.c0 {
  margin-left: -12px;
}

.c3 {
  min-width: 0;
  -webkit-flex: 0 0 33.33333333333333%;
  -ms-flex: 0 0 33.33333333333333%;
  flex: 0 0 33.33333333333333%;
}

.c10 {
  min-width: 0;
  -webkit-flex: 0 0 66.66666666666666%;
  -ms-flex: 0 0 66.66666666666666%;
  flex: 0 0 66.66666666666666%;
}

.c5 {
  width: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:first-child > .c5 {
  padding-top: 0;
}

.c7 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: -12px;
  }
}

<div
  class="c0 c1"
  data-id="columns"
  display="flex,flex,flex,flex,flex"
>
  <div
    class="c2 c3 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <div
          class="c9"
          style="margin-top: 2px;"
        >
          This is 1/3
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2 c10 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <div
          class="c9"
          style="margin-top: 2px;"
        >
          This is 2/3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it correctly sets width for proportions 1/12, 7/12, 1/3 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
  padding-left: 12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c9 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: center;
}

.c0 {
  margin-left: -12px;
}

.c11 {
  min-width: 0;
  -webkit-flex: 0 0 33.33333333333333%;
  -ms-flex: 0 0 33.33333333333333%;
  flex: 0 0 33.33333333333333%;
}

.c3 {
  min-width: 0;
  -webkit-flex: 0 0 8.333333333333332%;
  -ms-flex: 0 0 8.333333333333332%;
  flex: 0 0 8.333333333333332%;
}

.c10 {
  min-width: 0;
  -webkit-flex: 0 0 41.66666666666667%;
  -ms-flex: 0 0 41.66666666666667%;
  flex: 0 0 41.66666666666667%;
}

.c5 {
  width: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:first-child > .c5 {
  padding-top: 0;
}

.c7 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: -12px;
  }
}

<div
  class="c0 c1"
  data-id="columns"
  display="flex,flex,flex,flex,flex"
>
  <div
    class="c2 c3 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <div
          class="c9"
          style="margin-top: 2px;"
        >
          This is 1/12
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2 c10 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <div
          class="c9"
          style="margin-top: 2px;"
        >
          This is 5/12
        </div>
      </div>
    </div>
  </div>
  <div
    class="c2 c11 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <div
          class="c9"
          style="margin-top: 2px;"
        >
          This is 1/3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it sets width to flex by default 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  width: 100%;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
  padding-left: 12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c0 {
  margin-left: -12px;
}

.c3 {
  min-width: 0;
}

.c5 {
  width: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:first-child > .c5 {
  padding-top: 0;
}

.c7 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:576px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    display: block;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    padding-left: 12px;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:992px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:1200px) {
  .c6 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    margin-left: -12px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: -12px;
  }
}

<div
  class="c0 c1"
  data-id="columns"
  display="flex,flex,flex,flex,flex"
>
  <div
    class="c2 c3 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="c2 c3 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="c2 c3 c4"
    data-id="column"
    width="full"
  >
    <div
      class="c5 c6"
      display="block,block,block,block,block"
      height="full"
    >
      <div
        class="c7 c8"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
